# zeal-videopoker

./: CMakeLists.txt  README.md
assets/: cards.aseprite  cards.tmx  cards.tsx  cards_modified.aseprite  cards_modified.tsx  music.zmt  splash.zmt
src/: assets.c  assets.h  audio.c  audio.h  gameplay.c  gameplay.h  layout_map.h  render.c  render.h  splash.c  splash.h  videopoker.c  videopoker.h
tools/: generate_cards.py  generate_layout_map.py
